--- a/src/components/FeatureShowcase/FeatureShowcase.module.css
+++ b/src/components/FeatureShowcase/FeatureShowcase.module.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.5rem;
+    margin-bottom: 1rem
   }
   
   @media (max-width: 800px) {
